--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "heroicons": "^2.1.5",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
